[package]
name = "solana_ws"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio-tungstenite = {version = "0.21.0", features = ["native-tls"]}
tokio = { version = "1.37.0", features = ["full"] }
futures-util = {version = "0.3.30", features = ["sink","io"]}
serde_json = "1.0.117"
solana-sdk = "1.18.1"
solana-client = "1.18.1"
jito-geyser-protos = { workspace = true }
tonic = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
